--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
       </div>
     </nav>
-    <header data-background="img/header/14.jpg" class="intro">
+    <header data-background="img/herobg.jpg" class="intro">
       <div class="intro-body">
         <h4>Nadav Zarfin <span class="bold">Designs</span></h4>
         <h1>Where Creativity Meets Code</h1>
